src/java/algorithm-jna/src/main/java/com/sengled/media/jna/jpg_encoder/Jpg_encoderLibrary.java

package com.sengled.media.jna.jpg_encoder;
import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
/**
 * JNA Wrapper for library <b>jpg_encoder</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface Jpg_encoderLibrary extends Library {
	public static final String JNA_LIBRARY_NAME = "jpg_encoder";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(Jpg_encoderLibrary.JNA_LIBRARY_NAME);
	public static final Jpg_encoderLibrary INSTANCE = (Jpg_encoderLibrary)Native.loadLibrary(Jpg_encoderLibrary.JNA_LIBRARY_NAME, Jpg_encoderLibrary.class);
	/** <i>native declaration : ./log.h</i> */
	public static final int SLS_LOG_INFO = (int)0x0001;
	/** <i>native declaration : ./log.h</i> */
	public static final int SLS_LOG_DEBUG = (int)0x0002;
	/** <i>native declaration : ./log.h</i> */
	public static final int SLS_LOG_WARNING = (int)0x0003;
	/** <i>native declaration : ./log.h</i> */
	public static final int SLS_LOG_ERROR = (int)0x0004;
	/** <i>native declaration : ./log.h</i> */
	public static final int SLS_LOG_FATAL = (int)0x0005;
	/** <i>native declaration : jpg_encoder.h:12</i> */
	public interface Init_log_callback_callback extends Callback {
		void apply(int level, Pointer charPtr1);
	};
	/**
	 * Original signature : <code>int Init(Init_log_callback_callback*)</code><br>
	 * <i>native declaration : jpg_encoder.h:12</i>
	 */
	int Init(Jpg_encoderLibrary.Init_log_callback_callback log_callback);
	/**
	 * Original signature : <code>int EncodeJPG(const YUVFrame*, int, int, const char*, JPGFrame*)</code><br>
	 * <i>native declaration : jpg_encoder.h:14</i><br>
	 * @deprecated use the safer methods {@link #EncodeJPG(com.sengled.media.jna.jpg_encoder.YUVFrame, int, int, java.lang.String, com.sengled.media.jna.jpg_encoder.JPGFrame)} and {@link #EncodeJPG(com.sengled.media.jna.jpg_encoder.YUVFrame, int, int, com.sun.jna.Pointer, com.sengled.media.jna.jpg_encoder.JPGFrame)} instead
	 */
	@Deprecated 
	int EncodeJPG(YUVFrame yuv_frame, int dst_width, int dst_height, Pointer token, JPGFrame jpg_frame);
	/**
	 * Original signature : <code>int EncodeJPG(const YUVFrame*, int, int, const char*, JPGFrame*)</code><br>
	 * <i>native declaration : jpg_encoder.h:14</i>
	 */
	int EncodeJPG(YUVFrame yuv_frame, int dst_width, int dst_height, String token, JPGFrame jpg_frame);
	/**
	 * Original signature : <code>int Destroy(JPGFrame*)</code><br>
	 * <i>native declaration : jpg_encoder.h:16</i>
	 */
	int Destroy(JPGFrame jpg_frame);
}
